--- a/src/index.html
+++ b/src/index.html
@@ -38,21 +38,25 @@
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="1"
+              onclick="agregar('1')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="2"
+              onclick="agregar('2')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="3"
+              onclick="agregar('3')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="+"
+              onclick="agregar('+')"
             />
           </div>
 
@@ -61,21 +65,25 @@
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="4"
+              onclick="agregar('4')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="5"
+              onclick="agregar('5')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="6"
+              onclick="agregar('6')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="-"
+              onclick="agregar('-')"
             />
           </div>
 
@@ -84,21 +92,25 @@
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="7"
+              onclick="agregar('7')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="8"
+              onclick="agregar('8')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="9"
+              onclick="agregar('9')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="*"
+              onclick="agregar('*')"
             />
           </div>
 
@@ -107,21 +119,25 @@
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="0"
+              onclick="agregar('0')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="."
+              onclick="agregar('.')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="/"
+              onclick="agregar('/')"
             />
             <input
               class="border-separate border-2 w-10 h-10 hover:bg-slate-300 flex items-center justify-center m-1"
               type="button"
               value="="
+              onclick="calcular()"
             />
           </div>
 
@@ -129,11 +145,13 @@
             <input
               type="button"
               value="C"
+              onclick="borrar()"
               class="border-separate border-2 w-48 m-1 hover:bg-red-200 flex items-center justify-center"
             />
           </div>
         </div>
       </div>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
